Landing page and welcome work.  Need to fix positioning of button.  Need to make Welcome invisible

--- a/react-photo-app/src/App.css
+++ b/react-photo-app/src/App.css
@@ -11,3 +11,15 @@
 .user-profile{
   background-color: silver;
 }
+
+.loginBtn{
+  position: relative;
+  top: 200px;
+  left: 400px;
+
+}
+
+.loginContainer{
+  background: url("https://images.unsplash.com/photo-1579547945413-497e1b99dac0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  background-size: cover;
+}
